added input email

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <header>header</header>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, veniam mollitia ab corporis eveniet, nobis sunt sed quasi deleniti ipsam delectus voluptates quidem vel repellendus dolorum cupiditate veritatis recusandae? Velit</p>
+    <input type="email" name="n1" id="n1">
 </body>
 </html>
