--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p>Lorem22 ipsum dolor, sit amet consectetur adipisicing elit. Soluta, veniam mollitia ab corporis eveniet, nobis sunt sed quasi deleniti ipsam delectus voluptates quidem vel repellendus dolorum cupiditate veritatis recusandae? Velit</p>
     <p>ipsum dolor, sit amet consectetur adipisicing elit. Soluta, veniam mollitia ab corporis eveniet, nobis sunt sed quasi deleniti ipsam delectus voluptates quidem vel repellendus dolorum cupiditate veritatis recusandae? Velit</p>
     <input type="email" name="n1" id="n1">
+    <input type="text" name="n1" id="n1">
+    <input type="password" name="n1" id="n1">
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat facilis architecto quod natus quia commodi velit exercitationem laborum totam perferendis corporis consequatur quam pariatur, at explicabo, ad harum. Nam, doloremque.</p>
 </body>
 </html>
